default/objects/Required_Application_Document__c/Required_Application_Document__c.object-meta.xml
<CustomObject>
    <label>Required Application Document</label>
    <nameField>
        <label>Application Document Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Required Application Documents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>