default/objects/Required_Application_Document__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Required Application Documents</relationshipLabel>
    <relationshipName>Required_Application_Documents</relationshipName>
    <type>Lookup</type>
</CustomField>