default/objects/Required_Application_Document__c/fields/File_Type__c.field-meta.xml
<CustomField>
    <fullName>File_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>File Type</label>
    <referenceTo>File_Type__c</referenceTo>
    <relationshipLabel>Required Application Documents</relationshipLabel>
    <relationshipName>Required_Application_Documents</relationshipName>
    <type>Lookup</type>
</CustomField>