default/objects/Required_Application_Document__c/fields/Loan_Program__c.field-meta.xml
<CustomField>
    <fullName>Loan_Program__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Loan Program</label>
    <referenceTo>Loan_Program__c</referenceTo>
    <relationshipLabel>Required Application Documents</relationshipLabel>
    <relationshipName>Required_Application_Documents</relationshipName>
    <type>Lookup</type>
</CustomField>