default/objects/Required_Application_Document__c/fields/Residential_Loan_Application__c.field-meta.xml
<CustomField>
    <fullName>Residential_Loan_Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Residential Loan Application</label>
    <referenceTo>ResidentialLoanApplication</referenceTo>
    <relationshipLabel>Required Application Documents</relationshipLabel>
    <relationshipName>Required_Application_Documents</relationshipName>
    <type>Lookup</type>
</CustomField>